--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ decorator==4.4.0
 defusedxml==0.5.0
 docutils==0.14
 entrypoints==0.3
-fasttext==0.8.22
+git+https://github.com/facebookresearch/fastText.git
 future==0.17.1
 gast==0.2.2
 gensim==3.7.1
@@ -37,7 +37,7 @@ jupyter-console==6.0.0
 jupyter-core==4.4.0
 Keras==2.2.4
 Keras-Applications==1.0.6
-keras-contrib==2.0.8
+git+https://www.github.com/keras-team/keras-contrib.git
 Keras-Preprocessing==1.0.5
 kiwisolver==1.0.1
 Markdown==3.0.1
